@@ -1317,7 +1317,8 @@ void pstreamDefTimestep(int pstreamID, int tsID)
 	}
 
       if ( cdoTimer ) timer_start(timer_write);
-      if ( tsID > 0 ) streamSync(pstreamptr->fileID);
+      /* don't use sync -> very slow on GPFS */
+      //  if ( tsID > 0 ) streamSync(pstreamptr->fileID);
       streamDefTimestep(pstreamptr->fileID, tsID);
       if ( cdoTimer ) timer_stop(timer_write);
     }
