@@ -1,3 +1,7 @@
+2010-08-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+        * pstreamDefTimestep: removed call to streamSync (very slow on GPFS)
+
 2010-08-05  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* changed percentile parameter type from integer to float [request: Nikolaus Groll]
